--- a/TODO
+++ b/TODO
@@ -119,12 +119,12 @@
 - polymul, polyadd, polydiv, polyneg, polyeval, polyorder, polygcd, polylcm, polyroots, ...
   A lot of our ops do these mod n, we could make ..mod versions of each.
 
----- \/ ------  Next release
-
 - put entropy_bytes call in XS.
+
 - have the RNG return a context and store it in our package context space.
   Should help threaded performance by removing lock.
   Careful to not leak state.
-- further processing on Ramanujan prime limits up to 4e14
 
-- 5.8.5 gcdext complains about 3 vs. '3'.  ancient Test::More issue?
+- further processing on Ramanujan prime limits up to 2e15
+
+- 5.8.5 gcdext complains about 3 vs. '3'.  Another Math::BigInt::Lite issue.
