--- a/Changes
+++ b/Changes
@@ -4,8 +4,14 @@ Revision history for Perl module Math::Prime::Util
 
     [ADDED]
 
-    - random_semiprime                geenrate random n-bit semiprime
+    - random_semiprime                random n-bit semiprime (even split)
+    - random_unrestricted_semiprime   random n-bit semiprime
 
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - Speedup for is_carmichael.
+
+    - Slightly tighter Ramanujan prime bounds for large inputs.
 
 0.65 2017-05-03
 
