--- a/Changes
+++ b/Changes
@@ -10,6 +10,19 @@ Revision history for Perl module Math::Prime::Util
       direct-to-GMP.  Works around a bug in XS trying to turn the
       result into an object where 5.8.7 and earlier gets lost.
 
+    - We create more const integers, which speeds up common uses of
+      permutations.
+
+    - CSPRNG now stores context per-thread rather than using a single
+      mutex-protected context.  This speeds up anything using random
+      numbers a fair amount, especially with threaded Perls.
+
+    - With the above two optimizations, randperm(144) is 2.5x faster.
+
+    - irand test has been added to the threading tests, showing our random
+      context is per-thread.  Each thread gets its own sequence and calls
+      to srand/csrand and using randomness doesn't impact other threads.
+
 
 0.66 2017-09-12
 
