Validate n in is_power, includes necessary string->bigint conversion

--- a/TODO
+++ b/TODO
@@ -131,3 +131,7 @@
 - Move ISAAC to per-thread context model.
 
 - Destroy csprng context on thread destruction.
+
+- Predicates from Pari/GP?  istotient, ispowerful, ispolygonal, isfundamental
+
+- Pari/GP:  permorder, permsign
