--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl module Math::Prime::Util
 
 0.67 2017-?
+    [ADDED]
+
+    - is_square(n)                    returns 1 if n is a perfect square
+    - lastfor                         stops forprimes (etc.) iterations
 
     [FUNCTIONALITY AND PERFORMANCE]
 
