--- a/TODO
+++ b/TODO
@@ -131,3 +131,5 @@
 - formultiperm doesn't completely cover lastfor
 
 - submit bug report for Perl error in 30b8ab3
+
+- Add Math::GMPq and Math::AnyNum as bigint classes?
