--- a/Changes
+++ b/Changes
@@ -8,6 +8,11 @@ Revision history for Perl module Math::Prime::Util
 
     [FUNCTIONALITY AND PERFORMANCE]
 
+    - Unknown bigint classes no longer return two values after objectify.
+      Thanks to Daniel Șuteu for finding this.
+
+    - Using lastfor inside a formultiperm should work correctly.
+
     - randperm a little faster for k < n cases, and can handle big n
       values without running out of memory as long as k << n.
       E.g. 5000 random native ints without dups:  @r = randperm(~0,5000);
@@ -15,9 +20,6 @@ Revision history for Perl module Math::Prime::Util
     - forpart with primes pulls min/max values in for a small speedup.
 
     - forderange 10-20% faster.
-
-    - Unknown bigint classes no longer return two values after objectify.
-      Thanks to Daniel Șuteu for finding this.
 
     - hammingweight for bigints 3-8x faster.
 
