forcomb {} n; iterates over all k 0 .. n.  Power set of n.  Matches Pari/GP and Perl6.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Revision history for Perl module Math::Prime::Util
 
 0.68 2017-?
 
+    [API Changes]
+
+    - forcomb with one argument iterates over the power set, so k=0..n
+      instead of k=n.  The previous behavior was undocumented.  The new
+      behavior matches Pari/GP (forsubset) and Perl6 (combinations).
+
     [ADDED]
 
     - factorialmod(n,m)               n! mod m calculated efficiently
