Add is_totient part 2 (PP and tests)

--- a/TODO
+++ b/TODO
@@ -139,4 +139,4 @@
   1) single arg, neg input = 0.  Almost everything in case statement.
   2) multi-arg.  others.
 
-- istotient PP, test
+- split out t/19-moebius
