--- a/TODO
+++ b/TODO
@@ -138,3 +138,13 @@
 - add some bignum tests to hammingweight, valuation, etc.
 
 - is_square_free should use |n|
+
+- csrand and srand should be calling a util function to seed GMP csprng
+
+- prime_count_approx should give a proper integer result when given a
+  bigint input.  Currently it calls RiemannR which since bignum isn't on,
+  calls the XS RiemannR.  That starts truncating excessively past 10^23 ish.
+
+- sieve_range does trial division
+
+- split single-base M-R out into function.  Use that in factor.c.
