--- a/Changes
+++ b/Changes
@@ -24,6 +24,9 @@ Revision history for Perl module Math::Prime::Util
     - Turned off threads testing unless release or extended testing is used.
       A few smokers seem to have threads lib that die before we event start.
 
+    - Removed all Math::MPFR code and references.  The latest GMP backend
+      has everything we need.
+
 
 0.69 2017-11-08
 
