--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@
   * Valgrind, coverage
   * use:  -O2 -g -Wall -Wextra -Wdeclaration-after-statement -fsigned-char
   * Test on 32-bit Perl.  Test on Win32.
+  * Test on gcc70 (NetBSD), gcc119 (AIX/Power8), gcc22 (MIPS64), gcc115 (aarch)
+  * prove -b -I../Math-Prime-Util-GMP/blib/lib -I../Math-Prime-Util-GMP/blib/arch
 
 - For new functions:
   XS, .h, .c, PP, PPFE, export, t exports, lib/ntheory.pm, doc, test
